# machine-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
machine_learning/: linreg_run.py  main.py  mlp_run.py
machine_learning/dataset/: linreg.py  mnist.py
machine_learning/models/: linear_regress.py  multilayer_perceptron.py
