[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Alex Prestes <alex.prestes@usp.br>"]
readme = "README.md"
packages = [{ include = "machine_learning" }]

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
pandas = "^2.0.3"
scikit-image = "^0.21.0"
wordcloud = "^1.9.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
